# ProphetHacks

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  README.md  TEAM_BRIEF.md  render.yaml
dhruv_GPT_forecasting/: .env.example  API_KEYS.md  DATA_FINDINGS.md  README.md  competition.md  pyproject.toml
dhruv_GPT_forecasting/configs/: default.json  wrds_news.example.sql  wrds_news.sql
dhruv_GPT_forecasting/data/external_evidence/: README.md
dhruv_GPT_forecasting/prompts/: forecasting_lane_v1_system.txt  grounded_research_v1_system.txt  supervisor_v1_system.txt
dhruv_GPT_forecasting/src/dhruv_gpt_forecasting/: __init__.py  arena_agent.py  arena_batch.py  arena_eval.py  arena_live_data.py  arena_priors.py  backtest.py  cli.py  combine.py  config.py  context.py  data_loaders.py  evidence_archiver.py  evidence_replay.py  evidence_sources.py  experiments.py  forecaster.py  gating.py  grounded_research.py  kalshi_contracts.py  kalshi_parallel_backtest.py  kalshi_public.py  live_readiness.py  llm_tester.py  lseg_query.py  market_linker.py  news_synthesizer.py  oos_eval.py  openrouter.py  pit_evidence.py  preflight.py  (+8 more)
dhruv_GPT_forecasting/tests/: test_arena_agent.py  test_arena_eval.py  test_backtest_baselines.py  test_config.py  test_constraints.py  test_context.py  test_experiments.py  test_features.py  test_grounded_research.py  test_kalshi_contracts.py  test_kalshi_parallel_backtest.py  test_lseg_query.py  test_market_linker.py  test_oos_eval.py  test_pit_evidence.py  test_preflight.py  test_prophet_contract.py  test_topvol_loader.py  test_vendor_evidence.py
(+427 files in other folders)
